[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/lights/fusebox/fusebox.png" type="Texture" id=1]
[ext_resource path="res://assets/lights/fusebox/fusebox_open.png" type="Texture" id=2]
[ext_resource path="res://assets/lights/fusebox/Fusebox.gd" type="Script" id=3]
[ext_resource path="res://assets/Shadow.tscn" type="PackedScene" id=4]
[ext_resource path="res://InteractArea.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 13 )

[node name="Fusebox" type="Node2D"]
script = ExtResource( 3 )

[node name="Shadow" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -8 )
scale = Vector2( 7, 2 )
z_index = 0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="SpriteOpen" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -8, 0 )
texture = ExtResource( 2 )

[node name="InteractArea2D" type="Area2D" parent="."]
position = Vector2( 0, -28 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
visible = false
position = Vector2( 0, 31 )
shape = SubResource( 1 )
[connection signal="interacted" from="InteractArea2D" to="." method="_on_InteractArea2D_interacted"]
